<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_title_vertical_margin"
            android:layout_marginTop="@dimen/text_view_title_vertical_margin"
            android:text="@string/string_add_a_goal"
            android:textSize="@dimen/text_view_title_text_size"/>

        <ImageButton
            android:id="@+id/image_button_close"
            android:layout_width="@dimen/image_button_close_width"
            android:layout_height="@dimen/image_button_close_height"
            android:layout_alignBottom="@id/text_view_title"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_view_title"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_clear"/>

        <EditText
            android:id="@+id/edit_text_add_a_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:hint="@string/hint"
            android:padding="@dimen/edit_text_add_a_goal_padding"
            android:singleLine="true"/>

        <me.jimmyshaw.starlightgoals.widgets.CustomDatePickerView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_add_a_goal"/>

        <Button
            android:id="@+id/button_add_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_picker"
            android:text="@string/string_add_goal"
            android:textAllCaps="false"/>

    </RelativeLayout>
</ScrollView>